fix training parameters

--- a/example.ini
+++ b/example.ini
@@ -1,11 +1,11 @@
 [agent]
 # data and paths
-boxfile_path=../generated_data/bounding_boxes.npy
-imagefile_path=../generated_data/image_locations.txt
+boxfile_path=../dataset-generator/bounding_boxes.npy
+imagefile_path=../dataset-generator/image_locations.txt
 resultdir_path=./results
 agentdir_path=./agent
 # hardware
-gpu_id=-1
+gpu_id=0
 # optimizer
 epsilon=0.01
 learning_rate=0.0001
@@ -20,11 +20,11 @@ start_epsilon=1.0
 end_epsilon=0.1
 decay_steps=300000
 # training
-steps=1000000
+steps=100000
 train_max_episode_len=100
 eval_n_episodes=10
 eval_interval=500
-use_tensorboard=True
+use_tensorboard=False
 # eval
 save_eval=False
 pred_bboxes=./pred_bboxes.npy
