extended action space

--- a/example.ini
+++ b/example.ini
@@ -24,7 +24,7 @@ steps=100000
 train_max_episode_len=100
 eval_n_episodes=10
 eval_interval=500
-use_tensorboard=False
+use_tensorboard=True
 # eval
 save_eval=False
 pred_bboxes=./pred_bboxes.npy
