Add wrapper for datasets

--- a/example.ini
+++ b/example.ini
@@ -1,10 +1,13 @@
+[dataset]
+dataset=simple
+simple_dataset_image_locations=../dataset-generator/image_locations.txt
+simple_dataset_bounding_boxes=../dataset-generator/bounding_boxes.npy
+
 [agent]
 # seeds
 seed_agent=20301
 seed_environment=20302
-# data and paths
-boxfile_path=../dataset-generator/bounding_boxes.npy
-imagefile_path=../dataset-generator/image_locations.txt
+# paths
 resultdir_path=./results
 agentdir_path=./agent
 # hardware
@@ -13,7 +16,7 @@ gpu_id=0
 epsilon=0.01
 learning_rate=0.0001
 # agent
-gamma=0.1
+gamma=0.95
 replay_start_size=100
 replay_buffer_capacity=20000
 update_interval=1
