Fix random seeding

--- a/example.ini
+++ b/example.ini
@@ -1,4 +1,7 @@
 [agent]
+# seeds
+seed_agent=20301
+seed_environment=20302
 # data and paths
 boxfile_path=../dataset-generator/bounding_boxes.npy
 imagefile_path=../dataset-generator/image_locations.txt
