Add support for synthtext dataset

--- a/example.ini
+++ b/example.ini
@@ -1,7 +1,6 @@
 [dataset]
 dataset=simple
-simple_dataset_image_locations=../dataset-generator/image_locations.txt
-simple_dataset_bounding_boxes=../dataset-generator/bounding_boxes.npy
+dataset_path=./dataset
 
 [agent]
 # seeds
@@ -11,7 +10,7 @@ seed_environment=20302
 resultdir_path=./results
 agentdir_path=./agent
 # hardware
-gpu_id=0
+gpu_id=-1
 # optimizer
 epsilon=0.01
 learning_rate=0.0001
