Refactor interface of dataset wrapper

--- a/example.ini
+++ b/example.ini
@@ -1,6 +1,6 @@
 [dataset]
 dataset=simple
-dataset_path=./dataset
+dataset_path=../dataset-generator
 
 [agent]
 # seeds
@@ -8,7 +8,7 @@ seed_agent=20301
 seed_environment=20302
 # paths
 resultdir_path=./results
-agentdir_path=./agent
+agentdir_path=./agent_20200122-203829_DQN
 # hardware
 gpu_id=-1
 # optimizer
