Refactor interface of dataset wrapper

--- a/example.ini
+++ b/example.ini
@@ -1,6 +1,6 @@
 [dataset]
 dataset=simple
-dataset_path=./dataset
+dataset_path=../dataset-generator
 
 [agent]
 # seeds
@@ -8,7 +8,7 @@ seed_agent=20301
 seed_environment=20302
 # paths
 resultdir_path=./results
-agentdir_path=./agent
+agentdir_path=./agent_20200122-203829_DQN
 # hardware
 gpu_id=-1
 # optimizer
@@ -25,7 +25,7 @@ start_epsilon=1.0
 end_epsilon=0.1
 decay_steps=300000
 # training
-steps=100000
+steps=100
 train_max_episode_len=100
 eval_n_episodes=10
 eval_interval=500
