Remove obsolete files

--- a/config/example.ini
+++ b/config/example.ini
@@ -1,16 +1,16 @@
 [dataset]
-dataset=simple
-dataset_path=../dataset-generator
+dataset=sign
+dataset_path=/Users/janusch/repos/signdata
 
-[agent]
-# seeds
+[experiment]
+experiment_id=foobar
+gpu_id=-1
 seed_agent=20301
 seed_environment=20302
-# paths
-resultdir_path=./results
-agentdir_path=./agent_20200122-203829_DQN
-# hardware
-gpu_id=-1
+
+[training]
+steps=100000
+train_max_episode_len=100
 # optimizer
 epsilon=0.01
 learning_rate=0.0001
@@ -24,17 +24,12 @@ target_update_interval=100
 start_epsilon=1.0
 end_epsilon=0.1
 decay_steps=300000
-# training
-steps=100000
-train_max_episode_len=100
-eval_n_episodes=10
-eval_interval=500
+
+[evaluation]
+# during training
+use_periodic_hooks=True
+eval_n_episodes=30
+eval_interval=2000
 use_tensorboard=False
-# eval
-save_eval=False
-pred_bboxes=./pred_bboxes.npy
-pred_labels=./pred_labels.npy
-pred_scores=./pred_scores.npy
-gt_bboxes=./gt_bboxes.npy
-gt_labels=./gt_labels.npy
-iou_threshold=0.5
+
+[environment]
