Add environment config vars

--- a/config/example.ini
+++ b/config/example.ini
@@ -33,3 +33,10 @@ eval_interval=2000
 use_tensorboard=False
 
 [environment]
+playout_episode=False
+premasking=True
+max_steps_per_image=200
+bbox_scaling=0.0
+bbox_transformer=base
+ior_marker_type=cross
+has_termination_action=True
